project(c0.0.12a-dev)

add_executable(c0.0.12a-dev
	Minecraft.c
	Player.c 
	Player.h
	phys/AABB.c
	phys/AABB.h
	level/Chunk.c
	level/Chunk.h
	renderer/Frustum.c
	renderer/Frustum.h
	level/Level.c
	level/Level.h
	level/LevelRenderer.c
	level/LevelRenderer.h
	renderer/Tesselator.c
	renderer/Tesselator.h
	level/NoiseMap.c
	level/NoiseMap.h
	level/tile/Tile.c
	level/tile/Tile.h
	level/tile/GrassTile.c
	level/tile/GrassTile.h
	HitResult.c
	HitResult.h
	renderer/Textures.c
	renderer/Textures.h
	Timer.c
	Timer.h
	Util.c 
	Util.h
	Entity.c
	Entity.h
    character/Cube.c
	character/Cube.h
    character/Polygon.c
	character/Polygon.h
	character/Vec3.c
	character/Vec3.h
	character/Vertex.c
	character/Vertex.h
	character/Zombie.c
	character/Zombie.h
	character/ZombieModel.c
	character/ZombieModel.h
	particle/Particle.c
	particle/Particle.h
	particle/ParticleEngine.c
	particle/ParticleEngine.h
	level/tile/Bush.c
	level/tile/Bush.h
	gui/Font.c
	gui/Font.h
	level/LevelGen.c
	level/LevelGen.h
)